@@ -68,6 +68,30 @@ class ezcDocumentPdfTests extends ezcDocumentPdfTestCase
             $this->tempDir . $fileName
         );
     }
+
+    public function testRenderCustomStyleAndAdditionalPdfParts()
+    {
+        $docbook = new ezcDocumentDocbook();
+        $docbook->loadFile( dirname( __FILE__ ) . '/files/pdf/paragraph.xml' );
+
+        $pdfDoc = new ezcDocumentPdf( new ezcDocumentPdfOptions( array(
+            'driver' => new ezcDocumentPdfSvgDriver(),
+        ) ) );
+        $pdfDoc->loadStyles( dirname( __FILE__ ) . '/files/pdf/custom.css' );
+        $pdfDoc->registerPdfPart( new ezcDocumentPdfHeaderPdfPart() );
+        $pdfDoc->createFromDocbook( $docbook );
+        $pdf = (string) $pdfDoc;
+
+        file_put_contents(
+            $this->tempDir . ( $fileName = __CLASS__ . '_' . __FUNCTION__ . '.svg' ),
+            $pdf
+        );
+    
+        $this->assertXmlFileEqualsXmlFile(
+            $this->basePath . 'renderer/' . $fileName,
+            $this->tempDir . $fileName
+        );
+    }
 }
 
 ?>
