@@ -4,6 +4,7 @@
 - Fixed: Invalid font creation in haru driver.
 - Fixed: Implementation of PDF wrapper class, to call correct renderer.
 - Fixed: Implementation of style loading in PDF wrapper class.
+- Implemented: Method to register additional PDF parts in wrapper class.
 
 
 1.2alpha1 - Tuesday 26 May 2009
